# RustSbire

./: Cargo.toml
src/: lib.rs  main.rs
src/effet_hall/: mod.rs
src/effet_hall_algo/: mod.rs
src/effet_hall_data/: mod.rs
src/key_control/: mod.rs
src/motors/: mod.rs
src/movement_algo/: mod.rs
src/remote_control/: mod.rs
