[package]
name = "rust-sbire"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
linux-embedded-hal = "0.2.2"
pscontroller-rs = { git = "https://github.com/RandomInsano/pscontroller-rs.git", branch = "master" }
tokio = { version = "1.26.0", features = [ "macros", "rt", "rt-multi-thread", "sync", "time" ] }
