[package]
name = "rust-sbire"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
linux-embedded-hal = "0.2.2"
pscontroller-rs = { git = "https://github.com/SII-Public-Research/pscontroller-rs.git", branch = "master" }
sna41-motorshield = { git = "https://github.com/SII-Public-Research/sna41_motorshield.git", branch = "main" }
tlv493d_a1b6 = { git = "https://github.com/SII-Public-Research/tlv493d-a1b6", branch = "embedded_hal" }
tokio = { version = "1.26.0", features = [ "macros", "rt", "rt-multi-thread", "sync", "time" ] }
